// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DivisionHover renders background color boolean props with theme props 1`] = `
<div
  className="sc-bdVaJa fvVKxK"
/>
`;

exports[`DivisionHover renders correctly 1`] = `
<div
  className="sc-bdVaJa klJskJ"
/>
`;

exports[`DivisionHover renders scale boolean props 1`] = `
<div
  className="sc-bdVaJa esKmAd"
  scale={2}
/>
`;
